--- a/transparency-ong/imports/ui/Login/Login.css
+++ b/transparency-ong/imports/ui/Login/Login.css
@@ -1,28 +1,37 @@
-.content{
-    font-family: 'Roboto', sans-serif;
-    margin: auto;
-    position: absolute;
-    width: 50%;   
-    top: 50%;
-    left: 50%;
-    padding: 10px;
-    transform: translate(-50%, -50%);
-    border: 3px solid green;
-}
 label{
     font-family: 'Roboto', sans-serif;
     display: contents;
-    width: 80px;
+    /* width: 80px; */
 }
 input{
     font-family: 'Roboto', sans-serif;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 .btn{
     font-family: 'Roboto', sans-serif;
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
+    
 }
 button{
-    margin-right: 10px;
+    /* margin-right: 10px; */
+}
+
+.registertitle{
+    text-align: center;
+}
+
+.registerbtn{
+    /* margin-top: 3%;
+    margin-left: 37%; */
+}
+
+.main-layout{
+    /* min-height: 100vh;
+    width: 100vw; */
+}
+.background{
+    background-color: blue;
+    height: 100vh;
+    width: 100vw;
 }
