--- a/transparency-ong/imports/ui/Login/Login.css
+++ b/transparency-ong/imports/ui/Login/Login.css
@@ -1,11 +1,11 @@
 label{
     font-family: 'Roboto', sans-serif;
     display: contents;
-    /* width: 80px; */
+    width: 80px;
 }
 input{
     font-family: 'Roboto', sans-serif;
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px;
 }
 .btn{
     font-family: 'Roboto', sans-serif;
@@ -13,25 +13,21 @@ input{
     justify-content: center;
     
 }
-button{
-    /* margin-right: 10px; */
-}
-
 .registertitle{
     text-align: center;
 }
-
 .registerbtn{
-    /* margin-top: 3%;
-    margin-left: 37%; */
+    margin-top: 3%;
+    margin-left: 37%;
 }
-
 .main-layout{
-    /* min-height: 100vh;
-    width: 100vw; */
+    min-height: 100vh;
+    width: 100vw;
 }
 .background{
-    background-color: blue;
     height: 100vh;
     width: 100vw;
+}
+.register{
+    margin-top: 10%;
 }
