--- a/transparency-ong/imports/ui/Login/Login.css
+++ b/transparency-ong/imports/ui/Login/Login.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700,800,900');
 .centrado{
     text-align: center;
     padding-bottom: 2%;
@@ -9,13 +10,14 @@
 
 }
 .tag{
-    font-family: 'Roboto', sans-serif;
+    //font-family: 'Roboto', sans-serif;
     display: block;
     width: 80px;
     margin-left: 32%;
 } 
 .registertitle{
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
 }
 .registerbtn{
     margin-top: 3%;
@@ -29,18 +31,24 @@
 .background{
     height: 100vh;
     width: 100vw;
-    background-image: url(/img/background.jpg);
+    background-image: url(/img/landing.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .register{
-    margin-top: 10%;
-    margin-bottom: 2%;
+    /*margin-top: 10%;
+    margin-bottom: 2%;*/
 }
 .login{
-    margin-top: 10%;
+    /*margin-top: 10%;*/
 }
-.container{
+.centerVert{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.container2{
     color: black;
     background-color: rgba(240, 240, 240, 0.5);   
 }
