--- a/transparency-ong/imports/ui/Login/EventManager.css
+++ b/transparency-ong/imports/ui/Login/EventManager.css
@@ -33,3 +33,23 @@
     margin-left: 20%;
     border-radius: 24px;
 }
+.tema{
+    font-family: 'Roboto', sans-serif;
+    color:black;
+    padding-right: 2%;
+    padding-left: 2%;
+    font-size: 150%;
+    background-color: #f1f6f9;
+    border-radius: 24px;
+    padding-right: 5%;
+}
+.btnbrowse{
+    font-family: 'Roboto', sans-serif;
+    padding-top: 3%;
+    color:#a5a5a5;
+    padding-left: 7%;
+    margin-left: -69%;
+}
+.posicion{
+    padding-left: 100%;
+}
