Fixed html; Added Event creation and image upload

--- a/transparency-ong/imports/ui/Login/EventManager.css
+++ b/transparency-ong/imports/ui/Login/EventManager.css
@@ -53,3 +53,15 @@
 .posicion{
     padding-left: 100%;
 }
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+.centerLabelVerText {
+    display: flex;
+    align-items: center;
+}
