--- a/transparency-ong/imports/ui/Login/Login.css
+++ b/transparency-ong/imports/ui/Login/Login.css
@@ -71,3 +71,35 @@
     margin-top: 2%;
     margin-left: 7%;
 }
+.divStyle{
+    visibility: hidden;
+    position: fixed;
+    top: 20px;
+    left: 200px;
+    z-index: 98;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow:
+        0 0 50px 30px #fff;  /* inner white */
+        //0 0 120px 90px #6699FF; /* outer cyan */
+}
+.divStyle1{
+    visibility: hidden;
+    position: fixed;
+    top: 20px;
+    left: 200px;
+    z-index: 99;
+    border-radius: 50%;
+}
+svg {
+  display: block;
+  margin: 0 auto;
+}
+
+path {
+  fill: none;
+  stroke: black;
+  stroke-width: 4;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
