agregando campos de fecha y recaudado

--- a/transparency-ong/imports/ui/Login/VerEvento.css
+++ b/transparency-ong/imports/ui/Login/VerEvento.css
@@ -41,3 +41,9 @@
 .centrarbotones .btn-secondary .btn-dark{
     padding-top: 10%;
 }
+.fechadeexp{
+    margin-left: 28%;
+}
+.alineamiento label{
+    color: black;
+}
