--- a/transparency-ong/imports/ui/Login/EventManager.css
+++ b/transparency-ong/imports/ui/Login/EventManager.css
@@ -1,3 +1,6 @@
+.fondo{
+    background-color: rgb(102,102,102);
+}
 .titulo{
     padding-top: 10%;
     padding-left: 3%;
@@ -8,7 +11,7 @@
 
     display: block;
     padding-left: 35%;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgb(178,178,178,.5);
 }
 .contact_input1{
 	width: 158%;
