--- a/transparency-ong/imports/ui/Login/Login.css
+++ b/transparency-ong/imports/ui/Login/Login.css
@@ -91,6 +91,28 @@
     z-index: 99;
     border-radius: 50%;
 }
+.modalFade{
+    visibility: hidden;
+    z-index: 90;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.4);
+}
+.textPrize{
+    position: absolute;
+    bottom: 20px;
+    left: 35%;
+    color: #111;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    letter-spacing: -1px;
+    line-height: 1;
+    text-align: center;
+}
 svg {
   display: block;
   margin: 0 auto;
