--- a/transparency-ong/imports/ui/Receipt/properties.css
+++ b/transparency-ong/imports/ui/Receipt/properties.css
@@ -1105,3 +1105,8 @@ section
 	text-transform: uppercase;
 	font-weight: 600;
 }
+.fillImg{
+	object-fit: cover;
+  	width: 100%;
+  	height: 300px;
+}
