--- a/transparency-ong/imports/ui/Login/Login.css
+++ b/transparency-ong/imports/ui/Login/Login.css
@@ -135,3 +135,56 @@
 .cartSpan{
     margin-right: 2%;
 }
+.divStyle{
+    visibility: hidden;
+    position: fixed;
+    top: 20px;
+    left: 200px;
+    z-index: 98;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow:
+        0 0 50px 30px #fff;  /* inner white */
+        //0 0 120px 90px #6699FF; /* outer cyan */
+}
+.divStyle1{
+    visibility: hidden;
+    position: fixed;
+    top: 20px;
+    left: 200px;
+    z-index: 99;
+    border-radius: 50%;
+}
+.modalFade{
+    visibility: hidden;
+    z-index: 90;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.4);
+}
+.textPrize{
+    position: absolute;
+    bottom: 20px;
+    left: 35%;
+    color: #111;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    letter-spacing: -1px;
+    line-height: 1;
+    text-align: center;
+}
+svg {
+  display: block;
+  margin: 0 auto;
+}
+
+path {
+  fill: none;
+  stroke: black;
+  stroke-width: 4;
+  stroke-linecap: round;
+  stroke-linejoin: round;
